--- a/Portfolio/Portfolio/Index.html
+++ b/Portfolio/Portfolio/Index.html
@@ -64,7 +64,7 @@
                 <p> &emsp; </p>
 
             </div>
-            <button class="button" onclick="pullOut"> <span></span></button>
+            <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             
             <script>
                 $(".button").click(function () {
