--- a/Portfolio/Portfolio/Javascript.html
+++ b/Portfolio/Portfolio/Javascript.html
@@ -68,7 +68,7 @@
                     &emsp; Altogether, I have a decent understanding of HTML, CSS, and Javascript, but I do not enjoy working with HTML and/or CSS due to my lack of “aesthetic vision.”
                 </p>
             </div>
-            <button class="button" onclick="pullOut"> <span></span></button>
+            <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
         </div>
     </div>
