--- a/Portfolio/Portfolio/MVCSharp.html
+++ b/Portfolio/Portfolio/MVCSharp.html
@@ -58,9 +58,17 @@
 
         <div class="col-md-10">
             <div class="reflections">
-                <p> </p>
+                <p>
+                    &emsp; MVC, Model-View-Controller, was a rather abstract topic to wrap our heads around. This was an entirely new and alien idea for me personally, and it took time to comprehend. I found the most effective method for me to learn MVC was through hands-on activities.
+                    <br />
+                    &emsp; C# was relatively easy to learn and use, and did not require much effort. Razor Code was not a tough tool to adapt, however, there are a few things I still do not know how to do with it.
+                    <br />
+                    &emsp; MVC requires a controller to interact with the views. This makes it very convenient to split up tasks among our team. Working together on the Conversion Website was another new experience, and our first time on a collaborative project. The team aspect was exciting and difficult at times. It was nice to be able to count on someone else to do their part and lend a hand, but it was also a little annoying having to depend on other people’s code.
+                    <br />
+                    &emsp; Although difficult at first, I feel comfortable enough with MVC and believe I have a sufficient knowledge of C#. I also enjoy working as a team on these sorts of projects.
+                </p>
             </div>
-            <button class="button" onclick="pullOut"> <span></span></button>
+            <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
         </div>
     </div>
