--- a/Portfolio/Portfolio/SafenetConsultantProblem.html
+++ b/Portfolio/Portfolio/SafenetConsultantProblem.html
@@ -68,7 +68,7 @@
                     &emsp; I found the Safenet Consultant Problem easy, but the translating to C# a litte more difficult.
                 </p>
             </div>
-            <button class="button" onclick="pullOut"> <span></span></button>
+            <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
         </div>
     </div>
