--- a/Portfolio/Portfolio/SourceControl.html
+++ b/Portfolio/Portfolio/SourceControl.html
@@ -68,7 +68,7 @@
                     &emsp; Merging and pulling and all those other fun procedures of source control had to be followed. We managed it alright, but it required some coordination. Overall, File IO and Source Control were relatively easy concepts to learn and understand.
                 </p>
             </div>
-            <button class="button" onclick="pullOut"> <span></span></button>
+            <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
         </div>
     </div>
