--- a/Portfolio/Portfolio/Overall.html
+++ b/Portfolio/Portfolio/Overall.html
@@ -58,7 +58,13 @@
 
         <div class="col-md-10">
             <div class="reflections">
-                <p> </p>
+                <p>
+                    &emsp; This whole summer camp was a unique experience that I do not believe I could obtain anywhere else. We covered a lot of content in a relatively short period of time, and it was kind of overwhelming. I have a at least a decent comprehension of each topic we covered. I felt that most of my learning can be attributed to in-class activities, as Ryan Bennett’s lectures sometimes when into concepts that were beyond my understanding. I believe that I learned a great deal from this past month and look forward to putting what I learend to good use.
+                    <br />
+                    &emsp; This was also the first time I’ve had to work with other people while coding. It’s a whole different role when working with others. I have to depend on others and others have to depend on me while we all help each other. It requires a lot of coordination, but if pulled off right, it makes the whole tasks a bit easier to handle. I found that my team worked well with one another, and that we were able to learn the topics and complete our projects quite well.
+                    <br />
+                    &emsp; I have to say that for all the fustration and pain I encountered along the way, I enjoyed every minute of this summer camp. I’m glad that I was able to be a part of it. Working with other people and learning new concepts outside of a school is rewarding in its own way. I absolutely love all this coding stuff, even if I vocalize that I hate it. I wouldn’t trade this experience for anything, and I hope that I’ll be able to continue with this line of work.
+                </p>
             </div>
             
             <div id="vl"> </div>
