--- a/Portfolio/Portfolio/Javascript.html
+++ b/Portfolio/Portfolio/Javascript.html
@@ -67,6 +67,8 @@
                     <br />
                     &emsp; Altogether, I have a decent understanding of HTML, CSS, and Javascript, but I do not enjoy working with HTML and/or CSS due to my lack of “aesthetic vision.”
                 </p>
+                <img src="JavascriptCode.png" alt="Code for Javascript" width="500" height="250" style="margin: 5%" />
+                <img src="WebsiteJavascript.png" alt="Website for Javascript" width="500" height="250" style="margin: 5%" />
             </div>
             <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
