--- a/Portfolio/Portfolio/MVCSharp.html
+++ b/Portfolio/Portfolio/MVCSharp.html
@@ -67,6 +67,8 @@
                     <br />
                     &emsp; Although difficult at first, I feel comfortable enough with MVC and believe I have a sufficient knowledge of C#. I also enjoy working as a team on these sorts of projects.
                 </p>
+                <img src="MVCCode.png" alt="Code for MVC" width="500" height="250" style="margin: 5%" />
+                <img src="WebsiteMVC.png" alt="Website for MVC" width="500" height="250" style="margin: 5%" />
             </div>
             <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
