--- a/Portfolio/Portfolio/SafenetConsultantProblem.html
+++ b/Portfolio/Portfolio/SafenetConsultantProblem.html
@@ -67,6 +67,10 @@
                     <br />
                     &emsp; I found the Safenet Consultant Problem easy, but the translating to C# a litte more difficult.
                 </p>
+                <img src="SafenetCode1.png" alt="Code for Safenet Consultant Problem" width="350" height="250" style="margin: 2%" />
+                <img src="SafenetCode2.png" alt="Code for Safenet Consultant Problem" width="350" height="250" style="margin: 2%" />
+                <img src="SafenetCode3.png" alt="Code for Safenet Consultant Problem" width="350" height="250" style="margin: 2%" />
+                <img src="ATMApplication.png" alt="Working ATM" width="350" height="250" style="margin: 2%" />
             </div>
             <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
