--- a/Portfolio/Portfolio/SourceControl.html
+++ b/Portfolio/Portfolio/SourceControl.html
@@ -67,6 +67,8 @@
                     <br />
                     &emsp; Merging and pulling and all those other fun procedures of source control had to be followed. We managed it alright, but it required some coordination. Overall, File IO and Source Control were relatively easy concepts to learn and understand.
                 </p>
+                <img src="SourceControlFileIO.png" alt="source control for FileIO" width="300" height="250" style="margin: 5%" />
+                <img src="FileIOCode.png" alt="Code for FileIO" width="500" height="250" style="margin: 5%" />
             </div>
             <button class="button" onclick="pullOut" style="display:none;"> <span></span></button>
             <div id="vl"> </div>
