--- a/Portfolio/Portfolio/Index.html
+++ b/Portfolio/Portfolio/Index.html
@@ -54,6 +54,9 @@
             <button type="button" class="buttons" onclick="location.href='MVCSharp.html';">MVC & C#</button>
 
             <button type="button" class="buttons" onclick="location.href='Overall.html';">Overall</button>
+
+            <button type="button" class="buttons buttons" onclick="location.href='IntershipReflection.html';">End of Internship</button>
+
         </div>
     </nav>
 
