--- a/Portfolio/Portfolio/InternshipReflection.html
+++ b/Portfolio/Portfolio/InternshipReflection.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="StyleSheet.css" />
-    <title>Portfolio - Overall Experience</title>
+    <title>Portfolio - Internship Reflection</title>
 </head>
 <body>
     <div class="row">
@@ -41,7 +41,7 @@
     </div>
 
 
-    <div class="bar">
+    <div class="bar col-md-12">
         <button type="button" class="buttons" onclick="location.href='SafeNetConsultantProblem.html';">Safenet Consulting Problem</button>
 
         <button type="button" class="buttons" onclick="location.href='SourceControl.html';">Source Control</button>
@@ -50,9 +50,9 @@
 
         <button type="button" class="buttons" onclick="location.href='MVCSharp.html';">MVC & C#</button>
 
-        <button type="button" class="buttons buttonsNow" onclick="location.href='Overall.html';">Overall</button>
+        <button type="button" class="buttons buttons" onclick="location.href='Overall.html';">Overall</button>
 
-        <button type="button" class="buttons buttons" onclick="location.href='IntershipReflection.html';">End of Internship</button>
+        <button type="button" class="buttons buttonsNow" onclick="location.href='IntershipReflection.html';">End of Internship</button>
     </div>
 
     <div class="row">
@@ -68,10 +68,19 @@
                     &emsp; I have to say that for all the fustration and pain I encountered along the way, I enjoyed every minute of this summer camp. I’m glad that I was able to be a part of it. Working with other people and learning new concepts outside of a school is rewarding in its own way. I absolutely love all this coding stuff, even if I vocalize that I hate it. I wouldn’t trade this experience for anything, and I hope that I’ll be able to continue with this line of work.
                 </p>
             </div>
-            
+
             <div id="vl"> </div>
         </div>
     </div>
+
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+</head>
+<body>
 
 </body>
 </html>
