--- a/Portfolio/Portfolio/Index.html
+++ b/Portfolio/Portfolio/Index.html
@@ -44,7 +44,7 @@
     </div>
 
     <nav>
-        <div class="bar">
+        <div class="bar row">
             <button type="button" class="buttons" onclick="location.href='SafeNetConsultantProblem.html';">Safenet Consulting Problem</button>
 
             <button type="button" class="buttons" onclick="location.href='SourceControl.html';">Source Control</button>
@@ -55,7 +55,7 @@
 
             <button type="button" class="buttons" onclick="location.href='Overall.html';">Overall</button>
 
-            <button type="button" class="buttons buttons" onclick="location.href='IntershipReflection.html';">End of Internship</button>
+            <button type="button" class="buttons buttons" onclick="location.href='InternshipReflection.html';">End of Internship</button>
 
         </div>
     </nav>
