--- a/Portfolio/Portfolio/SourceControl.html
+++ b/Portfolio/Portfolio/SourceControl.html
@@ -41,7 +41,7 @@
     </div>
 
 
-    <div class="bar">
+    <div class="bar row">
         <button type="button" class="buttons" onclick="location.href='SafeNetConsultantProblem.html';">Safenet Consulting Problem</button>
 
         <button type="button" class="buttons buttonsNow" onclick="location.href='SourceControl.html';">Source Control</button>
@@ -52,7 +52,7 @@
 
         <button type="button" class="buttons" onclick="location.href='Overall.html';">Overall</button>
 
-        <button type="button" class="buttons buttons" onclick="location.href='IntershipReflection.html';">End of Internship</button>
+        <button type="button" class="buttons buttons" onclick="location.href='InternshipReflection.html';">End of Internship</button>
 
     </div>
 
